--- a/index.html
+++ b/index.html
@@ -19,13 +19,17 @@
           <h3 class="text-center mb-3">
             <i class="fas fa-globe-europe"></i> Crazy Weather
           </h3>
-          <div class="form-group">
+          <div class="form-group text-center">
             <input
               type="text"
               id="searchCity"
               class="form-control form-control-lg"
               placeholder="Enter city name ..."
             />
+            <button id="btnSetCity" class="btn btn-info px-5 mt-3">
+              Set City
+            </button>
+            <div class="cityPicture"></div>
           </div>
           <div id="match-list"></div>
         </div>
