Fix load cities

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <i class="fas fa-globe-europe"></i> Crazy Weather
           </h3>
           <div class="form-group text-center">
+            <h4>Search a city.. and click on it ..</h4>
             <input
               type="text"
               id="searchCity"
