--- a/index.html
+++ b/index.html
@@ -14,7 +14,11 @@
   </head>
   <body>
     <div class="container mt-5">
-      <div class="row">
+      <h3 id="loading" class="text-center mb-3">
+        <i class="fas fa-globe-europe"></i> Crazy Weather
+        <small>...loading cities</small>
+      </h3>
+      <div id="data" class="row">
         <div class="col-md-6 m-auto">
           <h3 class="text-center mb-3">
             <i class="fas fa-globe-europe"></i> Crazy Weather
