--- a/info.html
+++ b/info.html
@@ -13,15 +13,15 @@
     <title>Crazy Weather</title>
   </head>
   <body>
-    <div class="container mt-5 text-center">
-      <div id="general" class="row"  >
-      <div class="col-xs-6 jumbotron">
+    <div class="container m-5">
+      <div id="general" class="row text-center"  >
+      <div class="col-xs jumbotron">
         <h3 class="text-center mb-3">
             <i class="fas fa-globe-europe"></i> Crazy Weather
           </h3>
         <small id="cityName"></small><br />
         <small id="date"></small>
-        <div id="centralImg" class="">
+        <div id="centralImg" >
           <div id="picture"></div>
           <div id="temp"></div>
         </div>
