--- a/info.html
+++ b/info.html
@@ -14,8 +14,9 @@
   </head>
   <body>
     <div class="container m-5">
-      <div id="general" class="row text-center"  >
-      <div class="col-xs jumbotron">
+        
+      <div id="general" class="row text-center"  >        
+      <div class="col-xs jumbotron">        
         <h3 class="text-center mb-3">
             <i class="fas fa-globe-europe"></i> Crazy Weather
           </h3>
@@ -26,6 +27,12 @@
           <div id="temp"></div>
         </div>
         <div id="descInfo"></div>
+        <!-- <div class="row"><div class="col-xs jumbotron"> -->
+        <div>
+                <button id="btnChangeCity" class="btn btn-primary mt-5 float-left"><i class="fas fa-city">Change city</i></button>
+                <button class="btn btn-primary mt-5 float-right" ><i class="fas fa-city">Compare cities</i></button>
+        </div>
+            <!-- </div></div> -->
       </div>
       <div class="row" id="data">
         <div class="col-xs jumbotron">
